--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,7 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+*.dll diff=astextplain
+*.apk diff=astextplain
+*.mdb diff=astextplain
+*.pdb diff=astextplain
